# cookiecutter-fastagency

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  cookiecutter.json
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: test.yml
cookiecutter_replay/: fastapi+mesop_3.10.json  fastapi+mesop_3.11.json  fastapi+mesop_3.12.json  mesop_3.10.json  mesop_3.11.json  mesop_3.12.json  nats+fastapi+mesop_3.10.json  nats+fastapi+mesop_3.11.json  nats+fastapi+mesop_3.12.json
hooks/: post_gen_project.py
scripts/: generate_cookiecutter_replay.py  generate_cookiecutter_replay.sh  test_cookiecutter.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  azure.yml  fly.toml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.env  devcontainer.json  docker-compose.yml  nats_server.conf  setup.sh
{{cookiecutter.project_slug}}/.github/workflows/: deploy_to_aws.yml  deploy_to_azure.yml  deploy_to_fly_io.yml  test.yml
{{cookiecutter.project_slug}}/docker/: Dockerfile  nginx.conf.template  run_fastagency.sh
{{cookiecutter.project_slug}}/docker/content/: nginx.conf.template  run_fastagency.sh
{{cookiecutter.project_slug}}/scripts/: deploy_to_aws.sh  deploy_to_azure.sh  deploy_to_fly_io.sh  lint.sh  register_to_fly_io.sh  run_docker.sh  run_mesop_locally.sh  static-analysis.sh
{{cookiecutter.project_slug}}/tests/: test_workflow.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: 1_main_natsprovider.py  2_main_fastapiprovider.py  3_main_mesop.py  __init__.py  main.py  main_1_{% if "nats" in cookiecutter.app_type %}nats{% else %}fastapi{% endif %}.py  main_2_fastapi.py  main_{% if "nats" in cookiecutter.app_type %}3{% else %}2{% endif %}_mesop.py  workflow.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/deployment/: main.py  main_1_{% if "nats" in cookiecutter.app_type %}nats{% else %}fastapi{% endif %}.py  main_2_fastapi.py  main_{% if "nats" in cookiecutter.app_type %}3{% else %}2{% endif %}_mesop.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/local/: main_console.py  main_mesop.py
