[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

version = "0.1.0"
name = "{{cookiecutter.project_slug}}"

dependencies = [
    "fastagency[autogen,mesop,fastapi]>=0.3.0.dev2",
]

[project.optional-dependencies]
server = [
    "uvicorn==0.31.0",
    "gunicorn==23.0.0",
]

lint = [
    "black==24.10.0",
    "ruff==0.6.9",
    "pyupgrade-directories",
]

static-analysis = [
    "types-PyYAML",
    "types-setuptools",
    "types-ujson",
    "mypy==1.5.1",
    "bandit==1.7.5",
]

testing = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

dev = ["{{cookiecutter.project_slug}}[lint,static-analysis,testing,server]"]

[tool.hatch.build.targets.wheel]
only-include = ["{{cookiecutter.project_slug}}"]

[tool.pytest.ini_options]
filterwarnings =["ignore::DeprecationWarning"]

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true
install_types = true
non_interactive = true

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
fix = true
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.bandit]
