[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

version = "0.1.0"
name = "{{cookiecutter.project_slug}}"

dependencies = [
    "fastagency[autogen{% if cookiecutter.app_type != "console" %},mesop,server{% if "fastapi" in cookiecutter.app_type %},fastapi{% endif %}{% if "nats" in cookiecutter.app_type %},nats{% endif %}{% endif %}]>=0.3.0",
]

[project.optional-dependencies]
testing = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

dev = ["{{cookiecutter.project_slug}}[testing]"]

[tool.hatch.build.targets.wheel]
only-include = ["{{cookiecutter.project_slug}}"]

[tool.pytest.ini_options]
filterwarnings =["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "function"
